--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ PORT=3000
 MERCADOPAGO_ACCESS_TOKEN=APP_USR-3205381887142911-092518-10142ad180197e3d6445bb48d621d4ee-2603358878
 
 # URL do seu front-end (para redirecionamento)
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://emanuele-e-lucas.com.br
