--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ PORT=3000
 MERCADOPAGO_ACCESS_TOKEN=APP_USR-4774596485860355-092816-fb325bcc6e0aba271425492472832dbd-135016438
 
 # URL do seu front-end (para redirecionamento)
-FRONTEND_URL=https://emanuele-e-lucas.com.br
+FRONTEND_URL=https://emanuele-e-lucas.onrender.com
